# pucgen

./: README.md  gen_mesh_utils.py  mshio.py  pucgen.py  pucgen_gui.py  pyproject.toml  scatter.py  vtk_viewer.py  vtkio.py
examples/: example1.puc  example1.py  example2.puc  example3.puc  example3.py  example4.puc
